# scalemate

./: .bazelrc  .drone.yml  .gitignore  .hgignore  BUILD.bazel  WORKSPACE  docker-compose.tests.yml  docker-compose.yml  drone.bazelrc  ideas.md  revive.toml  services.sh
accounts/: .dockerignore  BUILD.bazel  Dockerfile  Dockerfile-base  README.md  main.go
accounts/accounts_proto/: BUILD.bazel  accounts.proto
accounts/cmd/: BUILD.bazel  handle_events.go  migrate.go  rollback.go  root.go  up.go
accounts/conf/: BUILD.bazel  conf.go  conf_test.go
accounts/handlers/: BUILD.bazel  scheduler_node_created.go  scheduler_node_created_test.go  testsuite_test.go
accounts/migrations/: 0_create_upd_timestamp_function.down.sql  1_create_users.down.sql  1_create_users.up.sql  2_create_nodes.down.sql  2_create_nodes.up.sql  BUILD.bazel  migrations.go
accounts/models/: BUILD.bazel  node.go  node_test.go  testsuite_test.go  user.go  user_test.go  utils.go
accounts/server/: BUILD.bazel  auth.go  change_password.go  change_password_test.go  create.go  create_test.go  delete.go  delete_test.go  env.go  event_handlers.go  event_handlers_test.go  event_handles_test.go  event_listeners.go  event_listeners_test.go  get.go  get_test.go  handle_scheduler_node_created.go  handle_scheduler_node_created_test.go  list.go  list_test.go  options.go  password_auth.go  password_auth_test.go  password_node_auth.go  password_node_auth_test.go  register.go  register_test.go  server.go  server_test.go  testsuite_test.go  token_auth.go  token_auth_test.go  update.go  update_test.go
agent/cmd/: BUILD.bazel  root.go
billing/billing_proto/: BUILD.bazel  billing.proto
client/: BUILD.bazel  Dockerfile  Dockerfile-test  README.md  main.go
client/accounts/: BUILD.bazel  client.go  controllers.go  controllers_test.go  views.go  views_test.go
client/auth/: BUILD.bazel  tokens.go
client/cmd/: BUILD.bazel  changePassword.go  change_password.go  jobs.go  login.go  logout.go  models.go  nodes.go  register.go  root.go  tasks.go
client/scheduler/: BUILD.bazel  controllers.go  controllers_test.go  flags.go  flags_test.go  views.go  views_test.go
scheduler/: BUILD.bazel  README.md  main.go
scheduler/backend/: BUILD.bazel  confirm_resource_request.go  connect_node.go  create_node.go  options.go  server.go  validators.go
scheduler/bitarray/: BUILD.bazel  bitarray.go  bitarray_test.go
scheduler/cmd/: BUILD.bazel  migrate.go  rollback.go  root.go  up.go
scheduler/conf/: BUILD.bazel  conf.go  conf_test.go
scheduler/event_listeners/: BUILD.bazel  event_listeners.go  job_created.go  job_pending.go  job_pending_test.go  job_terminated.go  job_terminated_test.go  node_connected.go  node_connected_test.go  node_disconnected.go  node_disconnected_test.go  task_created.go  task_created_test.go  task_terminated.go  task_terminated_test.go  testsuite_test.go
scheduler/frontend/: BUILD.bazel  add_resource_request.go  add_resource_request_test.go  create_container.go  create_container_test.go  get_container.go  get_container_test.go  list_containers.go  list_containers_test.go  options.go  server.go  stop_container.go  stop_container_test.go  stub.go  testsuite_test.go  validators.go
scheduler/handlers/: BUILD.bazel  container_created.go  container_created_test.go  handlers.go  job_updated.go  job_updated_test.go  node_disconnected.go  node_disconnected_test.go  node_updated.go  node_updated_test.go  task_terminated.go  task_terminated_test.go  testsuite_test.go
scheduler/migrations/: 0_create_upd_timestamp_function.up.sql  1_create_nodes.down.sql  1_create_nodes.up.sql  2_create_nodes_idx.down.sql  2_create_nodes_idx.up.sql  3_create_node_labels.down.sql  3_create_node_labels.up.sql  4_create_containers.down.sql  4_create_containers.up.sql  4_create_node_pricing.down.sql  4_create_node_pricing.up.sql  5_create_container_labels.up.sql  5_create_containers.down.sql  5_create_containers.up.sql  6_create_container_idx.down.sql  6_create_container_idx.up.sql  6_create_container_labels.down.sql  7_create_limits.down.sql  7_create_limits.up.sql  7_create_resource_requests.down.sql  7_create_resource_requests.up.sql  8_create_container_scheduling_strategies.down.sql  8_create_container_scheduling_strategies.up.sql  8_create_processed_events.down.sql  8_create_processed_events.up.sql  BUILD.bazel  migrations.go
scheduler/models/: BUILD.bazel  container.go  container_test.go  job.go  job_test.go  jobs_selector.go  jobs_selector_test.go  limit.go  limits_selector.go  limits_selector_test.go  node.go  node_pricing.go  node_sorter.go  node_sorter_test.go  node_test.go  processed_event.go  processed_event_test.go  resource_request.go  resource_request_test.go  resource_requests_selector.go  resource_requests_selector_test.go  task.go  task_test.go  testsuite_test.go  utils.go  utils_test.go
scheduler/scheduler_proto/: BUILD.bazel  scheduler.proto
scheduler/server/: BUILD.bazel  add_resource_request.go  add_resource_request_test.go  auth.go  cancel_job.go  cancel_job_test.go  cancel_task.go  cancel_task_test.go  create_container.go  create_container_test.go  create_job.go  create_job_test.go  env.go  event_handlers.go  event_handlers_test.go  get_container.go  get_container_test.go  get_job.go  get_job_test.go  get_node.go  get_node_test.go  get_task.go  get_task_test.go  handle_job_pending.go  handle_job_pending_test.go  handle_job_terminated.go  handle_job_terminated_test.go  handle_node_connected.go  handle_node_connected_test.go  handle_node_disconnected.go  handle_node_disconnected_test.go  handle_task_created.go  handle_task_created_test.go  handle_task_terminated.go  handle_task_terminated_test.go  iterate_tasks.go  iterate_tasks_for_node.go  iterate_tasks_for_node_test.go  iterate_tasks_test.go  list_containers.go  (+27 more)
shared/: .drone.yml  BUILD.bazel  Dockerfile-test  Gopkg.toml  Makefile  README.md
shared/auth/: BUILD.bazel  claims.go  claims_test.go  credentials.go  credentials_test.go  tokens.go
shared/client/: BUILD.bazel  client.go  utils.go  views.go
shared/events/: BUILD.bazel  consumer.go  utils.go  (+6 more)
(+30 files in other folders)
