load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "accounts_proto_proto",
    srcs = ["accounts.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//shared/proto:validator_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:field_mask_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "accounts_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc",
        "@io_bazel_rules_go//proto:go_proto_validate",  # keep
    ],
    importpath = "github.com/mennanov/scalemate/accounts/accounts_proto",
    proto = ":accounts_proto_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//shared/proto:go_default_library",
        "@com_github_mwitkow_go_proto_validators//:go_default_library",  # keep
    ],
)

go_library(
    name = "go_default_library",
    embed = [":accounts_go_proto"],
    importpath = "github.com/mennanov/scalemate/accounts/accounts_proto",
    visibility = ["//visibility:public"],
)
