load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "handle_events.go",
        "root.go",
        "up.go",
    ],
    importpath = "github.com/mennanov/scalemate/accounts/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//accounts/conf:go_default_library",
        "//accounts/handlers:go_default_library",
        "//accounts/server:go_default_library",
        "//shared/auth:go_default_library",
        "//shared/events:go_default_library",
        "//shared/utils:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_nats_io_go_nats_streaming//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
    ],
)

load("@com_github_atlassian_bazel_tools//gorevive:def.bzl", "go_revive_test")

go_revive_test(
    name = "go_lint",
    # Go source files to be linted.
    srcs = glob(["*.go"]),
    # Revive .toml config.
    config = "//:revive.toml",  # it can also be a regular Bazel label.
    formatter = "stylish",
    # The paths have to be relative to the workspace root.
    paths = [
        "./...",
    ],
)
