load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["migrations.go"],
    importpath = "github.com/mennanov/scalemate/accounts/migrations",
    visibility = ["//visibility:public"],
    deps = [
        "//accounts/models:go_default_library",
        "@com_github_jinzhu_gorm//:go_default_library",
        "@com_github_mennanov_gormigrate//:go_default_library",
    ],
)

filegroup(
    name = "go_srcs",
    srcs = glob(["*.go"]),
    visibility = ["//accounts:__subpackages__"],
)
