load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "node.go",
        "user.go",
    ],
    importpath = "github.com/mennanov/scalemate/accounts/models",
    visibility = ["//visibility:public"],
    deps = [
        "//accounts/accounts_proto:go_default_library",
        "//scheduler/scheduler_proto:go_default_library",
        "//shared/auth:go_default_library",
        "//shared/events_proto:go_default_library",
        "//shared/utils:go_default_library",
        "@com_github_Masterminds_squirrel//:go_default_library",
        "@com_github_dgrijalva_jwt_go//:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_x_crypto//bcrypt:go_default_library",
    ],
)

load("@com_github_atlassian_bazel_tools//gorevive:def.bzl", "go_revive_test")

go_revive_test(
    name = "go_lint",
    # Go source files to be linted.
    srcs = glob(["*.go"]),
    # Revive .toml config.
    config = "//:revive.toml",  # it can also be a regular Bazel label.
    formatter = "stylish",
    # The paths have to be relative to the workspace root.
    paths = [
        "./...",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "node_test.go",
        "testsuite_test.go",
        "user_test.go",
    ],
    data = [
        "//accounts/migrations",
    ],
    embed = [":go_default_library"],
    deps = [
        "//accounts/accounts_proto:go_default_library",
        "//accounts/conf:go_default_library",
        "//scheduler/scheduler_proto:go_default_library",
        "//shared/testutils:go_default_library",
        "//shared/utils:go_default_library",
        "@com_github_golang_migrate_migrate//:go_default_library",
        "@com_github_golang_migrate_migrate//database/postgres:go_default_library",
        "@com_github_golang_migrate_migrate//source/file:go_default_library",
        "@com_github_jmoiron_sqlx//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_stretchr_testify//suite:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_x_crypto//bcrypt:go_default_library",
    ],
)
