load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

# gazelle:ignore

proto_library(
    name = "billing_proto_proto",
    srcs = ["billing.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@gogo_special_proto//github.com/gogo/protobuf/gogoproto",
    ],
)

go_proto_library(
    name = "billing_proto_go_proto",
    compilers = ["@io_bazel_rules_go//proto:gogo_grpc"],
    importpath = "github.com/mennanov/scalemate/billing/billing_proto",
    proto = ":billing_proto_proto",
    visibility = ["//visibility:public"],
    deps = [
    ],
)

go_library(
    name = "go_default_library",
    embed = [":billing_proto_go_proto"],
    importpath = "github.com/mennanov/scalemate/billing/billing_proto",
    visibility = ["//visibility:public"],
)
