load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["tokens.go"],
    importpath = "github.com/mennanov/scalemate/client/auth",
    visibility = ["//visibility:public"],
    deps = [
        "//accounts/accounts_proto:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

filegroup(
    name = "go_srcs",
    srcs = glob(["*.go"]),
    visibility = ["//client:__subpackages__"],
)
