load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "changePassword.go",
        "login.go",
        "logout.go",
        "register.go",
        "root.go",
    ],
    importpath = "github.com/mennanov/scalemate/client/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//client/accounts:go_default_library",
        "@com_github_mitchellh_go_homedir//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@org_golang_x_crypto//ssh/terminal:go_default_library",
    ],
)

filegroup(
    name = "go_srcs",
    srcs = glob(["*.go"]),
    visibility = ["//client:__subpackages__"],
)
