load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "migrate.go",
        "rollback.go",
        "root.go",
        "up.go",
    ],
    importpath = "github.com/mennanov/scalemate/scheduler/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//scheduler/migrations:go_default_library",
        "//scheduler/server:go_default_library",
        "//shared/events:go_default_library",
        "//shared/utils:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)

load("@com_github_atlassian_bazel_tools//gorevive:def.bzl", "go_revive_test")

go_revive_test(
    name = "go_lint",
    # Go source files to be linted.
    srcs = glob(["*.go"]),
    # Revive .toml config.
    config = "//:revive.toml",  # it can also be a regular Bazel label.
    formatter = "stylish",
    # The paths have to be relative to the workspace root.
    paths = [
        "./...",
    ],
)
